--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,3 +29,7 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+dependencies {
+    implementation 'junit:junit:4.12'
+}
